# certdayschecker

./: Makefile.in  README.md  certdayschecker.conf  certdayschecker.sh  certdaysremaining.c  configure  configure.in
autom4te.cache/: output.0  requests  traces.0
